--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -15,7 +15,7 @@ date: "Last updated: `r format(Sys.time(), '%d %B, %Y')`"
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = F,cache=T)
+knitr::opts_chunk$set(echo = F,cache=F)
 
 ```
 (Source code: https://github.com/b-lev/covid19-vis)
@@ -418,7 +418,7 @@ ggplot(ma.hosp)+aes(date,hosp_frac)+
 
 ```
 
-MA is performing just 300 tests per day, and earlier 200 per day. This plots the number of tests per day; data comes in only once a day...
+MA is performing an increasing (but still inadequate) number of tests per day.
 
 ```{r ma-testing, fig.height=3,fig.width=5}
 ma.testing<-select(ma.gov,date,contains("Lab_")) %>%
